--- a/_posts/2022-06-29-USB.md
+++ b/_posts/2022-06-29-USB.md
@@ -1,13 +1,12 @@
 ---
 layout:     post
-title:      "Thunderbolt 3, Thunderbolt 4, and USB4，都TMD是什么？"
+title:      Thunderbolt 3, Thunderbolt 4, and USB4，都TMD是什么？
 subtitle:   "USB与雷电口不得不说的事儿"
 date:       2022-06-29 23:18:00
 author:     "歪飍 译 Chris Webster 原创"
 header-img: "img/post-bg-000.jpg"
 catalog: true
-tags: Tech Thunderbolt USB Cable 
-    translation
+tags: Tech Thunderbolt USB translation
 ---
 
 ![Main Photo](https://raw.githubusercontent.com/Sh7ne/Sh7ne.github.io/master/img/in-post/usb/main-md.jpeg)
